samples/_failures_safe/1761128464_59c526_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2c2f478.c: In function ‘main’:
./samples/SAFE/__tmp_c2c2f478.c:153:21: error: expected declaration or statement at end of input
  153 |                     printf("Matrix A + B:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_c2c2f478.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c2c2f478.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c2c2f478.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c2c2f478.c:153:21: error: expected declaration or statement at end of input
